@@ -88,9 +88,9 @@ class AudioProfile(QtWidgets.QTabWidget):
         self.convert_to.addItems(["None | Passthrough"] + main.video_options.audio_formats)
 
         self.convert_to.view().setFixedWidth(self.convert_to.minimumSizeHint().width() + 50)
-        self.bitrate = QtWidgets.QComboBox()
-        self.bitrate.addItems([f"{x}k" for x in range(32, 1024, 32)])
-        self.bitrate.view().setFixedWidth(self.bitrate.minimumSizeHint().width() + 50)
+        self.bitrate = QtWidgets.QLineEdit()
+        self.bitrate.setPlaceholderText("128k")
+        self.bitrate.setFixedWidth(self.bitrate.minimumSizeHint().width() + 50)
 
         self.bitrate.setDisabled(True)
         self.downmix.setDisabled(True)
@@ -153,7 +153,7 @@ class AudioProfile(QtWidgets.QTabWidget):
             match_item=match_item_enum,
             match_input=match_input_value,
             conversion=self.convert_to.currentText() if self.convert_to.currentIndex() > 0 else None,
-            bitrate=self.bitrate.currentText(),
+            bitrate=self.bitrate.text(),
             downmix=self.downmix.currentText() if self.downmix.currentIndex() > 0 else None,
         )
 
